tweaks on add-book button and form

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Library</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js"defer></script>
   </head>
   <body>
     <header>
       <nav>
         <div class="library-name"><h1>T-Library</h1></div>
-        <div class="add-a-book-btn"><p>Add a Book</p></div>
+        <button class="add-a-book-btn">Add a Book</button>
       </nav>
     </header>
     <main>
