create dynamic card using js on adding item

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Library</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"defer></script>
   </head>
   <body>
     <header>
@@ -35,6 +34,8 @@
           </div>
         </div>
       </div>
+
+      <!-- !Book Form -->
       <div class="add-book-form">
         <form action="" class="form">
           <h2>Add a Book</h2>
@@ -65,5 +66,7 @@
         </form>
       </div>
     </main>
+    <!-- !Script Connection -->
+    <script src="script.js"defer></script>
   </body>
 </html>
