add functionality to remove button and manage style *style managed in book class and remove-button class

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
               <div class="page-nos">200</div>
             </div>
           </div>
+          <div class="remove-book">Remove</div>
         </div>
       </div>
 
