Add demo content through js

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     </header>
     <main>
       <div class="container">
-        <div class="book">
+        <!-- Defined book element through JS -->
+        <!-- <div class="book">
           <div class="book-title">Atomic Habits</div>
           <div class="book-details">
             <div class="author detail">
@@ -33,7 +34,7 @@
             </div>
           </div>
           <div class="remove-book">Remove</div>
-        </div>
+        </div> -->
       </div>
 
       <!-- !Book Form -->
