--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
           <div class="status-field">
             <label for="status">Status</label>
             <select name="status" id="status" required>
-              <option value="in-progress">In Progress</option>
-              <option value="not-read">Not Started</option>
-              <option value="completed">Completed</option>
+              <option value="In Progress">In Progress</option>
+              <option value="Not Started">Not Started</option>
+              <option value="Completed">Completed</option>
             </select>
           </div>
 
