add footer and style it

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Library</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
   </head>
   <body>
     <header>
       <nav>
-        <div class="library-name"><h1>T-Library</h1></div>
+        <div class="library-name"><h1>T-library</h1></div>
         <button class="add-a-book-btn">Add a Book</button>
       </nav>
     </header>
@@ -68,6 +69,11 @@
         </form>
       </div>
     </main>
+    <footer>
+      <div class="foo">
+        Copyright @kshetritej <i class="uil uil-github"></i>
+      </div>
+    </footer>
     <!-- !Script Connection -->
     <script src="script.js"defer></script>
   </body>
