give nav a fixed position

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </main>
     <footer>
       <div class="foo">
-        Copyright @kshetritej <i class="uil uil-github"></i>
+        <p>Copyright @kshetritej <i class="uil uil-github"></i></p>
       </div>
     </footer>
     <!-- !Script Connection -->
