add cancel button on form

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
           <h2>Add a Book</h2>
           <div class="title-field">
             <label for="book-titel">Title</label>
-            <input type="text" name="book-title" id="book-title" required />
+            <input type="text" name="book-title" id="book-title" value="" required />
           </div>
 
           <div class="author-field">
             <label for="author">Author</label>
-            <input type="text" name="author" id="author" required />
+            <input type="text" name="author" id="author" value="" required />
           </div>
 
           <div class="status-field">
@@ -65,7 +65,8 @@
             <label for="page-count">Pages</label>
             <input type="number" name="page" id="page" />
           </div>
-          <button type="submit" class="submit-button">Add</button>
+          <button class="submit-button">Add</button>
+          <button class="cancel-button">Cancel</button>
         </form>
       </div>
     </main>
