--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </main>
     <footer>
       <div class="foo">
-        <p>Copyright @kshetritej <i class="uil uil-github"></i></p>
+        <p>@kshetritej <i class="uil uil-github"></i></p>
       </div>
     </footer>
     <!-- !Script Connection -->
